improve swagger annotations and json file
