# monodose-webapp/src/api/apis/UserApi.ts
@@ -15,9 +15,9 @@
 
 import * as runtime from '../runtime';
 import {
-    Login404Response,
-    Login404ResponseFromJSON,
-    Login404ResponseToJSON,
+    ErrorsJson,
+    ErrorsJsonFromJSON,
+    ErrorsJsonToJSON,
     User,
     UserFromJSON,
     UserToJSON,
